snapshots/discussion/closed.snap
---
source: src/events/discussion.rs
info:
  author_name_length: 8
  colour_hex: "#FAB387"
  description_length: 4
  title_length: 60
---
embeds:
  - author:
      icon_url: "https://avatars.githubusercontent.com/u/58985301?v=4"
      name: sgoudham
      url: "https://github.com/sgoudham"
    color: 16429959
    description: test
    title: "[catppuccin-rfc/polybar] Discussion closed: #19 another test"
    url: "https://github.com/catppuccin-rfc/polybar/discussions/19"
